# Checkpoint-Protocol

./: .checkpointignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
checkpoint/: __init__.py  cli.py  config.py  export.py  gitutil.py  ignore.py  ledger.py  packet.py  restore.py  secrets.py  session.py  snapshot.py  store.py  util.py  verify.py
checkpoint_core/: __init__.py  autosave.py  autowatch.py  cli.py  config.py  diff.py  ed25519.py  engine.py  fsck.py  gc.py  gitbridge.py  identity.py  ignore.py  ledger.py  merge.py  objects.py  owneragent.py  policy.py  reachable.py  remote.py  rename.py  secrets.py  session.py  sign.py  store.py  sync.py  timeline.py  util.py  verify.py  watcher.py  worktree.py
checkpoint_core/server/: __init__.py  app.py  cli.py  reviews.py  store.py  ui_api.py
checkpoint_core/server/web/: app.js  index.html  style.css
docs/: _dogfood.md  agent-integration.md  backup.md  checkpoint-core-protocol.md  checkpoint-hosted-api.md  checkpoint-protocol.md  checkpoint-skill.md  checkpoint-web-ui.md  cli-reference.md  concepts.md  daily-workflow.md  faq.md  git-bridge.md  owner-agent.md  personal-autopilot.md  protocol-conformance.md  quickstart.md  reviews.md  security-model.md  server.md  web-ui.md
examples/: _demo_lib.sh  core_daemon_demo.sh  core_demo.sh  core_gc_fsck_demo.sh  core_http_remote_demo.sh  core_identity_demo.sh  core_policy_demo.sh  core_remote_demo.sh  core_rename_demo.sh  demo.sh  demo_01_core_vcs.sh  demo_02_autosave_recovery.sh  demo_03_rename_merge.sh  demo_04_signed_policy.sh  demo_05_remote_sync.sh  demo_06_hosted_web_ui.sh  demo_all.sh  web_review_demo.md  workflow.md
frontend/: README.md  package.json  pnpm-lock.yaml  review.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/repos/: page.tsx
frontend/app/repos/[owner]/[repo]/: page.tsx
frontend/app/repos/[owner]/[repo]/audit/: page.tsx
frontend/app/repos/[owner]/[repo]/identities/: page.tsx
frontend/app/repos/[owner]/[repo]/integrity/: page.tsx
frontend/app/repos/[owner]/[repo]/policy/: page.tsx
frontend/app/repos/[owner]/[repo]/reviews/[id]/: page.tsx
frontend/app/repos/[owner]/[repo]/sessions/[sessionId]/: page.tsx
frontend/components/checkpoint/: app-shell.tsx  badges.tsx  diff-viewer.tsx  hash.tsx  packet-summary.tsx  repo-card.tsx  repo-detail.tsx  repo-list.tsx  repo-tabs.tsx  reviews.tsx  session-header.tsx  session-panels.tsx  session-review.tsx  session-table.tsx  states.tsx  timeline.tsx
frontend/lib/checkpoint/: api-client.ts  format.ts  mock-data.ts  types.ts  use-api.ts
scripts/: release_check.sh
tests/: conftest.py  test_autopilot.py  test_autowatch.py  test_claude.py  test_concierge.py  test_core.py  test_daemon.py  test_fsck_gc.py  test_identity.py  test_lifecycle.py  test_mr_cli.py  test_policy.py  test_push_policy.py  test_release.py  test_remote.py  test_rename.py  test_reviews.py  test_secrets_allow.py  test_server.py  test_setup.py  test_ui_api.py  test_web.py
