[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-protocol"
version = "0.1.0"
description = "Checkpoint Core: a Git-replacement version-control protocol for human + AI code, with a Git import/export bridge and a Git-adapter wedge."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Checkpoint Protocol" }]
dependencies = [
  "PyYAML>=5.4",
]

[project.scripts]
checkpoint-core = "checkpoint_core.cli:main"
checkpoint-server = "checkpoint_core.server.cli:main"
checkpoint = "checkpoint.cli:main"

[tool.setuptools]
packages = ["checkpoint_core", "checkpoint_core.server", "checkpoint"]

[tool.setuptools.package-data]
"checkpoint_core.server" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
